# soc-alert-triage-openenv

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scenario_config.json
server/: __init__.py  app.py  campaigns.py  client.py  docker-compose.yml  environment.py  graders.py  models.py  utils.py
tests/: test_env.py
