[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-alert-triage-openenv"
version = "0.1.0"
description = "OpenEnv environment for SOC analyst style cybersecurity alert triage"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/soc-alert-triage-openenv"
Repository = "https://github.com/yourusername/soc-alert-triage-openenv"

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]

[tool.setuptools.package-data]
server = ["py.typed"]
